--- a/src/templates/includes/head.jade
+++ b/src/templates/includes/head.jade
@@ -31,5 +31,5 @@ head
         //script(src='assets/vendor/fancybox/source/helpers/jquery.fancybox-thumbs.js')
         script(src='assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js')
         script(src='assets/vendor/swiper/dist/js/swiper.min.js')
-        script(src='assets/js/emerge.js')
+        //script(src='assets/js/emerge.js')
         script(src='assets/js/script.js')
