--- a/src/templates/reviews.jade
+++ b/src/templates/reviews.jade
@@ -30,111 +30,94 @@ block content
 
         .b-reviews__container
             .b-reviews__list
-                .b-reviews__item.emerge.b-reviews__item_type_video(data-effect="relax", data-origin="top", data-expose="true")
+                a.b-reviews__item.emerge.b-reviews__item_type_video(data-effect="relax", data-origin="top", data-expose="true", href='review_ajax.html', rel='reviews')
                     .b-reviews__gutter
                     .b-reviews__header
-                        a.b-reviews__type(href='#') Видеоотзывы
-                    .text-center: a.b-reviews__title(href='client.html') 1ДСКиКО
+                        .text-center: span.b-reviews__title 1ДСКиКО
                     .b-reviews__content
-                        .b-review.b-review_video
-                            a.b-review__link(href='http://www.youtube.com/watch?v=opj24KnzrWo'): img.img-responsive(src='http://placehold.it/320x180')
+                        .b-reviews__media_video
+                            .b-reviews__link(href='http://www.youtube.com/watch?v=opj24KnzrWo'): img.img-responsive(src='http://placehold.it/320x180')
                     .b-reviews__footer
                         span.b-reviews__date 22.06.2016
-                        a.b-reviews__link(href='#') Оригинал отзыва
-                .b-reviews__item.emerge.b-reviews__item_type_mail(data-effect="relax", data-origin="top", data-expose="true")
+                        span.b-reviews__type Видеоотзывы
+                a.b-reviews__item.emerge.b-reviews__item_type_mail(data-effect="relax", data-origin="top", data-expose="true", href='review_ajax.html', rel='reviews')
                     .b-reviews__header
-                        a.b-reviews__type(href='#') Рекомендательные письма
-                    .text-center: a.b-reviews__title(href='client.html') Газелькин
+                        .text-center: span.b-reviews__title Газелькин
                     .b-reviews__content.b-reviews__content_type_image
-                        .b-review.b-review_image
-                            a.b-review__link(href='#review_1', data-url="http://placehold.it/196x264"): img.img-responsive(src='http://placehold.it/196x264')
+                        .b-reviews__media_image
+                            .b-reviews__link(href='#review_1', data-url="http://placehold.it/196x264"): img.img-responsive(src='http://placehold.it/196x264')
                     .b-reviews__footer
                         span.b-reviews__date 22.06.2016
-                        a.b-reviews__link(href='#') Оригинал отзыва
-                .b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true")
+                        span.b-reviews__type Рекомендации
+                a.b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true", href='review.html')
                     .b-reviews__header
-                        a.b-reviews__type(href='#') Социальные сети
-                        .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_fb
-                    .text-center: a.b-reviews__title(href='client.html') Exante
+                        .text-center: span.b-reviews__title Exante
                     .b-reviews__content.b-reviews__content_type_text
                         p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                     .b-reviews__footer
                         span.b-reviews__date 22.06.2016
-                        a.b-reviews__link(href='#') Оригинал отзыва
-                .b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true")
+                        span.b-reviews__type Социальные сети
+                a.b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true", href='review.html')
                     .b-reviews__header
-                        a.b-reviews__type(href='#') Социальные сети
-                        .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_vk
-                    .text-center: a.b-reviews__title(href='client.html') Exante
+                        .text-center: span.b-reviews__title Exante
                     .b-reviews__content.b-reviews__content_type_text
                         p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                     .b-reviews__footer
                         span.b-reviews__date 22.06.2016
-                        a.b-reviews__link(href='#') Оригинал отзыва
-                .b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true")
+                        span.b-reviews__type Социальные сети
+                a.b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true", href='review.html')
                     .b-reviews__header
-                        a.b-reviews__type(href='#') Социальные сети
-                        .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_tw
-                    .text-center: a.b-reviews__title(href='client.html') Exante
+                        .text-center: span.b-reviews__title Exante
                     .b-reviews__content.b-reviews__content_type_text
                         p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                     .b-reviews__footer
                         span.b-reviews__date 22.06.2016
-                        a.b-reviews__link(href='#') Оригинал отзыва
-                .b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true")
+                        span.b-reviews__type Социальные сети
+                a.b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true", href='review.html')
                     .b-reviews__header
-                        a.b-reviews__type(href='#') Социальные сети
-                        .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_instagram
-                    .text-center: a.b-reviews__title(href='client.html') Exante
+                        .text-center: span.b-reviews__title Exante
                     .b-reviews__content.b-reviews__content_type_text
                         p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                     .b-reviews__footer
                         span.b-reviews__date 22.06.2016
-                        a.b-reviews__link(href='#') Оригинал отзыва
-                .b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true")
+                        span.b-reviews__type Социальные сети
+                a.b-reviews__item.emerge.b-reviews__item_type_social(data-effect="relax", data-origin="top", data-expose="true", href='review.html')
                     .b-reviews__header
-                        a.b-reviews__type(href='#') Социальные сети
-                        .b-reviews__icon: .b-reviews__social-icon.b-reviews__social-icon_ok
-                    .text-center: a.b-reviews__title(href='client.html') Exante
+                        .text-center: span.b-reviews__title Exante
                     .b-reviews__content.b-reviews__content_type_text
                         p Являюсь постоянным клиентом вот уже несколько лет. По моему заказу сделано уже больше двух десятков различных баннеров, шапок для сайтов, фонов, кнопок и т.д. Легко находим общий язык и видение по очередному заказу. Всегда идет на встречу по любым доработкам и изменениям. Качество на высоте. Очень доволен сотрудничеством, всем рекомендую.
                     .b-reviews__footer
                         span.b-reviews__date 22.06.2016
-                        a.b-reviews__link(href='#') Оригинал отзыва
-                .b-reviews__item.emerge.b-reviews__item_type_fl(data-effect="relax", data-origin="top", data-expose="true")
+                        span.b-reviews__type Социальные сети
+                a.b-reviews__item.emerge.b-reviews__item_type_fl(data-effect="relax", data-origin="top", data-expose="true", href='review.html')
                     .b-reviews__header
-                        a.b-reviews__type(href='#') Fl.ru
-                    .text-center: a.b-reviews__title(href='client.html') Exante
+                        .text-center: span.b-reviews__title Exante
                     .b-reviews__content.b-reviews__content_type_text
                         p Задание было выполнено! Качество радует! Рекомендую!
                     .b-reviews__footer
                         span.b-reviews__date 22.06.2016
-                        a.b-reviews__link(href='#') Оригинал отзыва
-                .b-reviews__item.emerge.b-reviews__item_type_forums(data-effect="relax", data-origin="top", data-expose="true")
+                        span.b-reviews__type Fl.ru
+                a.b-reviews__item.emerge.b-reviews__item_type_forums(data-effect="relax", data-origin="top", data-expose="true", href='review.html')
                     .b-reviews__header
-                        a.b-reviews__type(href='#') Форумы
-                        .b-reviews__icon: .b-reviews__forum-icon.b-reviews__forum-icon_prcy
-                    .text-center: a.b-reviews__title(href='client.html') Exante
+                        .text-center: span.b-reviews__title Exante
                     .b-reviews__content.b-reviews__content_type_text
                         p Регулярно заказываем баннеры. Цены, качество, сроки - все отлично :)
                     .b-reviews__footer
                         span.b-reviews__date 22.06.2016
-                        a.b-reviews__link(href='#') Оригинал отзыва
-                .b-reviews__item.emerge.b-reviews__item_type_forums(data-effect="relax", data-origin="top", data-expose="true")
+                        span.b-reviews__type Форумы
+                a.b-reviews__item.emerge.b-reviews__item_type_forums(data-effect="relax", data-origin="top", data-expose="true", href='review.html')
                     .b-reviews__header
-                        a.b-reviews__type(href='#') Форумы
-                        .b-reviews__icon: .b-reviews__forum-icon.b-reviews__forum-icon_cypr
-                    .text-center: a.b-reviews__title(href='client.html') Exante
+                        .text-center: span.b-reviews__title Exante
                     .b-reviews__content.b-reviews__content_type_text
                         p Регулярно заказываем баннеры. Цены, качество, сроки - все отлично :)
                     .b-reviews__footer
                         span.b-reviews__date 22.06.2016
-                        a.b-reviews__link(href='#') Оригинал отзыва
+                        span.b-reviews__type Форумы
             script.
-                $('.b-reviews__item').each(function(){
+                $('.b-reviews__item').each(function () {
                     $(this).data('hold', Math.floor(Math.random() * 450) + 50);
                 });
-            .g-loader.g-loader_theme_dark.g-loader_reviews
+            .g-loader.g-loader_theme_dark.g-loader_reviews.hidden
                 .g-loader__content
                     a.g-loader__button.g-loader__button_state_loading(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
         .hidden
