--- a/src/blocks/b-language-tabs/b-language-tabs.less
+++ b/src/blocks/b-language-tabs/b-language-tabs.less
@@ -3,9 +3,7 @@
 @import "mymixins";
 
 .b-language-tabs {
-	//text-align: center;
-	margin-bottom: 9px;
-	margin-top: 41px;
+	padding-bottom: 9px;
 }
 
 .b-language-tabs__list {
@@ -94,6 +92,7 @@
 
 		border-bottom: 10px solid @link-active-color;
 	}
+
 	&:after {
 		@media (max-width: @screen-sm-max) {
 			display: none;
