--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -3,6 +3,7 @@
 @import "mymixins";
 
 .b-portfolio-item {
+	position: relative;
 }
 
 .b-portfolio-item__date {
@@ -172,5 +173,76 @@
 
 	@media (min-width: 1200px) {
 		max-width: ~"calc(100% - 110px)";
+	}
+}
+
+.b-portfolio-item__head {
+	position: relative;
+	padding-bottom: 45px;
+
+	.b-page__title {
+		margin-bottom: 0;
+	}
+}
+
+.b-portfolio-item__bg {
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
+
+	width: 100%;
+}
+
+.b-portfolio-item__background {
+	display: none;
+}
+
+.b-portfolio-item__shadow {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 370px;
+	background: linear-gradient(to bottom, rgba(22, 31, 106, 1) 0%, rgba(22, 31, 106, 0) 100%);
+
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
+}
+
+.b-portfolio-item__container_with_background.b-portfolio-item_ready {
+	.b-portfolio-item__head {
+		margin: -80px -40px -4px;
+
+		&:after {
+			position: absolute;
+			bottom: 4px;
+			height: 45px;
+			left: 0;
+			right: 0;
+
+			background: @body-muted-bg;
+
+			content: '';
+		}
+
+		.b-page__title {
+			position: absolute;
+			top: 80px;
+			left: 40px;
+			right: 40px;
+			color: #ffffff;
+		}
+
+		.b-page__link {
+			color: #0aeaad;
+		}
+	}
+
+	.b-language-tabs, .b-size-tabs {
+		background: @body-muted-bg;
+		margin-left: -40px;
+		margin-right: -40px;
+
+		padding-left: 40px;
+		padding-right: 40px;
 	}
 }
