--- a/src/blocks/b-reviews/b-reviews.less
+++ b/src/blocks/b-reviews/b-reviews.less
@@ -9,7 +9,6 @@
 
 .b-reviews__filter {
 	margin: -10px 0 95px;
-	//margin: -10px -20px 95px;
 }
 
 .b-reviews__container {
@@ -20,6 +19,10 @@
 
 	@media (min-width: @screen-sm-min) {
 		margin-top: 0;
+	}
+
+	@media (min-width: @screen-md-min) {
+		padding: 113px 40px 50px;
 	}
 }
 
@@ -57,6 +60,9 @@
 }
 
 .b-reviews__item {
+	display: inline-block;
+	cursor: pointer;
+
 	width: 320px;
 	margin-bottom: 45px;
 
@@ -74,6 +80,12 @@
 	transition: opacity 200ms ease-out, transform 200ms cubic-bezier(0, 0, 0.001, 1);
 	opacity: 0;
 	transform: scale(.95);
+
+	&:hover, &:active, &:focus {
+		text-decoration: none;
+		color: inherit;
+		transform: translate(0, -8px) !important;
+	}
 }
 
 .b-reviews__item_loaded {
@@ -88,13 +100,14 @@
 
 .b-reviews__type {
 	display: inline-block;
-	font-size: 12px;
-	line-height: 25px;
+	font-size: 11px;
+	line-height: 18px;
 	color: #161f6a;
 	font-weight: bold;
 	text-transform: uppercase;
 	letter-spacing: .1em;
 	cursor: default;
+	float: right;
 
 	&:hover, &:active, &:focus {
 		text-decoration: none;
@@ -106,17 +119,10 @@
 	color: @block-link-color;
 	font-size: 24px;
 	font-weight: bold;
-	border-bottom: 2px solid @block-link-border-color;
 
 	display: inline-block;
 	margin: 10px 10px 22px;
 	padding-bottom: 4px;
-
-	&:hover, &:active, &:focus {
-		text-decoration: none;
-		color: @block-link-hover-color;
-		border-bottom-color: @block-link-hover-border-color;
-	}
 }
 
 .b-reviews__content {
@@ -143,67 +149,6 @@
 	letter-spacing: .1em;
 }
 
-.b-reviews__link {
-	float: right;
-	.my-default-link();
-	text-transform: uppercase;
-	font-size: 11px;
-	//font-size: 12px;
-	line-height: 18px;
-	font-weight: bold;
-	letter-spacing: .1em;
-}
-
-.b-reviews__icon {
-	display: none;
-}
-
-/* Social icons */
-.b-reviews__social-icon {
-	width: 25px !important;
-	height: 25px !important;
-	background-size: 25px 25px;
-	background-repeat: no-repeat;
-	background-image: url("../../assets/img/social-icons.png");
-}
-
-.b-reviews__social-icon_fb {
-	background-position: -75px 0;
-}
-
-.b-reviews__social-icon_vk {
-	background-position: -100px 0;
-}
-
-.b-reviews__social-icon_tw {
-	background-position: -50px 0;
-}
-
-.b-reviews__social-icon_instagram {
-	background-position: -25px 0;
-}
-
-.b-reviews__social-icon_ok {
-	background-position: 0 0;
-}
-
-/* Forum icons */
-.b-reviews__forum-icon {
-	width: 25px !important;
-	height: 25px !important;
-	background-size: 25px 25px;
-	background-repeat: no-repeat;
-	background-image: url("../../assets/img/forum-icons.png");
-}
-
-.b-reviews__forum-icon_prcy {
-	background-position: 0 0;
-}
-
-.b-reviews__forum-icon_cypr {
-	background-position: -25px 0;
-}
-
 .b-reviews__head {
 	.my-heading-h2();
 
@@ -216,4 +161,104 @@
 	.my-heading-lead();
 
 	margin: 0 0 100px;
+}
+
+.b-reviews__link {
+	position: relative;
+	display: block;
+
+	&:after {
+		content: '';
+
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 42px;
+		height: 42px;
+
+		border-radius: 50%;
+		transition: all .05s ease-out;
+	}
+}
+
+.b-reviews__media_image {
+	background: left top no-repeat url("../../assets/img/reviews-list-type-mail-center.png");
+	background-size: cover;
+	width: 278px;
+
+	@media (min-width: 568px) and (max-width: @screen-sm-max) {
+		width: 278px - 50px;
+	}
+
+	padding: 0 56px 0 32px;
+	margin: 35px 0 50px 32px;
+
+	position: relative;
+
+	&:before {
+		position: absolute;
+		top: -35px;
+		left: 0;
+		background: left top no-repeat url("../../assets/img/reviews-list-type-mail-top.png");
+		background-size: 278px 35px;
+		width: 278px;
+
+		@media (min-width: 568px) and (max-width: @screen-sm-max) {
+			background-size: (278px - 50px) 35px;
+			width: 278px - 50px;
+		}
+
+		height: 35px;
+
+		content: '';
+	}
+
+	&:after {
+		position: absolute;
+		bottom: -60px;
+		left: 0;
+		background: left top no-repeat url("../../assets/img/reviews-list-type-mail-bottom.png");
+		background-size: 278px 60px;
+		width: 278px;
+
+		@media (min-width: 568px) and (max-width: @screen-sm-max) {
+			background-size: (278px - 50px) 60px;
+			width: 278px - 50px;
+		}
+
+		height: 60px;
+
+		content: '';
+	}
+
+	.b-reviews__link {
+		&:after {
+			background: #2856f6 center center no-repeat url("../../assets/img/zoom.svg");
+			background-size: 14px;
+			box-shadow: 0 8px 48px rgba(0, 143, 203, .4);
+		}
+
+		//&:hover:after {
+		//	width: 51px;
+		//	height: 51px;
+		//	background-size: 17px;
+		//}
+	}
+}
+
+.b-reviews__media_video {
+	.b-reviews__link {
+		&:after {
+			background: #e74c3c center center no-repeat url("../../assets/img/play.svg");
+			background-size: 13px 15px;
+			box-shadow: 0 8px 48px rgba(231, 76, 60, .8);
+		}
+
+		//&:hover:after {
+		//	width: 50px;
+		//	height: 50px;
+		//	background-size: 15px 18px;
+		//}
+	}
 }
