--- a/src/blocks/b-size-tabs/b-size-tabs.less
+++ b/src/blocks/b-size-tabs/b-size-tabs.less
@@ -4,12 +4,12 @@
 @import "type";
 
 .b-size-tabs {
-	//text-align: center;
-	margin-top: 6px;
-	margin-bottom: 36px;
+	padding-top: 6px;
+	padding-bottom: 36px;
 
 	margin-left: -5px;
 	margin-right: -5px;
+	margin-bottom: 0;
 
 	.list-unstyled();
 }
