--- a/src/templates/includes/footer.jade
+++ b/src/templates/includes/footer.jade
@@ -1,7 +1,7 @@
 .b-call-widget.b-call-widget__collapsed
     .b-call-widget__overlay
     .b-call-widget__content
-        iframe#callbackFrame(src='http://82.193.158.2:3002/widget.html')
+        iframe#callbackFrame(src='http://mikhail.boxone.ru:3000/widget.html')
     .b-call-widget__button
     a.b-call-widget__link(href='https://tolkunov.com/order') Заказать
 script.
