--- a/src/templates/includes/header.jade
+++ b/src/templates/includes/header.jade
@@ -11,6 +11,7 @@ nav.navbar.navbar-default.b-navbar
                 a.b-header__logo(href="/") TOLKUNOV.COM
                 ul.b-navbar__nav.visible-md.visible-lg
                     li: a(href='portfolio_type_1.html') Портфолио
+                    li: a(href='clients.html') Клиенты
                     li: a(href='reviews.html') Отзывы
                     li: a(href='prices.html') Стоимость
                     li: a(href='contacts.html') Контакты
