--- a/src/blocks/g-loader/g-loader.less
+++ b/src/blocks/g-loader/g-loader.less
@@ -78,7 +78,7 @@
 	}
 
 	&.btn-info {
-		box-shadow: 0 10px 40px 10px rgba(40, 86, 246, 0.3); //0 8px 24px fade(#2856f6, 40%);
+		box-shadow: 0 10px 40px 10px rgba(40, 86, 246, 0.3);
 	}
 }
 
