fixed btn shadow.

--- a/src/blocks/b-review/b-review.less
+++ b/src/blocks/b-review/b-review.less
@@ -167,6 +167,6 @@
 	}
 
 	&.btn-info {
-		box-shadow: 0 10px 40px 10px rgba(40, 86, 246, 0.3);
+		box-shadow: 0 10px 40px 10px fade(#161f6a, 30%);
 	}
 }
