remove outline. fixed reviews on main page.

--- a/src/blocks/b-reviews/b-reviews.less
+++ b/src/blocks/b-reviews/b-reviews.less
@@ -30,13 +30,17 @@
 	background: #fff;
 }
 
+.b-reviews__container_faded {
+	overflow: hidden;
+	padding-bottom: 0;
+}
+
 .b-reviews__list {
 	margin: 0 auto;
 }
 
 .b-reviews__list_faded {
 	max-height: 3000px;
-	overflow: hidden;
 
 	@media (min-width: @screen-sm-min) {
 		max-height: 2500px;
