--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -157,7 +157,7 @@ block content
 
                         .b-why-us__text
                             p Помогаем выходить из тупиковых ситуаций, когда баннер нужен «еще вчера», а исполнитель перестал выходить на связь.
-        .b-reviews__container
+        .b-reviews__container.b-reviews__container_faded
             .container
                 h2.b-reviews__head Отзывы клиентов
 
