--- a/src/blocks/b-filter/b-filter.less
+++ b/src/blocks/b-filter/b-filter.less
@@ -49,7 +49,7 @@
 .b-filter__item_active {
 	.b-filter__title {
 		color: @block-link-hover-color !important;
-		border-bottom-color: @block-link-hover-border-color !important;
+		border-bottom-color: transparent !important;
 	}
 
 	&.b-filter__item_with-arrow:after {
