--- a/src/blocks/b-portfolio-tag/b-portfolio-tag.less
+++ b/src/blocks/b-portfolio-tag/b-portfolio-tag.less
@@ -37,7 +37,7 @@
 	height             : @height;
 	line-height        : @height;
 	border-radius      : 5px;
-	box-shadow         : 1.5px 1.5px 32px fade(#161f6a, 10%);
+	box-shadow         : 0 20px 30px fade(#161f6a, 5%);
 	padding-left       : 12px;
 	padding-right      : 12px;
 	white-space        : nowrap;
