--- a/src/blocks/b-size-filter/b-size-filter.less
+++ b/src/blocks/b-size-filter/b-size-filter.less
@@ -14,7 +14,7 @@
 	height: 36px;
 	color: @block-link-color;
 	background: #fff;
-	box-shadow: 1.5px 1.5px 32px fade(#161f6a, 10%);
+	box-shadow: 0 20px 30px fade(#161f6a, 5%);
 	font-weight: bold;
 	letter-spacing: .1em;
 	display: inline-block;
