--- a/src/blocks/b-review/b-review.less
+++ b/src/blocks/b-review/b-review.less
@@ -143,12 +143,18 @@
 	border-radius: 100px;
 	font-size: 16px;
 	line-height: 2;
-	background: #161f6a;
-	border-color: #161f6a;
+	background: #fff;
+	border-color: #fff;
+	color: #161f6a;
 
 	&:hover, &:active, &:focus {
 		background: lighten(#161f6a, 5%) !important;
 		border-color: lighten(#161f6a, 5%) !important;
+		color: #fff;
+
+		&.btn-info {
+			box-shadow: 0 10px 40px 10px fade(#161f6a, 30%);
+		}
 	}
 
 	transition: all .2s;
@@ -167,6 +173,6 @@
 	}
 
 	&.btn-info {
-		box-shadow: 0 10px 40px 10px fade(#161f6a, 30%);
+		box-shadow: 0 20px 40px 10px fade(#161f6a, 5%);
 	}
 }
