--- a/src/blocks/b-size-tabs/b-size-tabs.less
+++ b/src/blocks/b-size-tabs/b-size-tabs.less
@@ -42,7 +42,7 @@
 		color: @link-hover-color;
 		border: 2px solid #fff;
 		background: #fff;
-		box-shadow: 1.5px 1.5px 32px rgba(0, 0, 0, .1);
+		box-shadow: 0 20px 30px fade(#161f6a, 5%);
 	}
 }
 
