some style fixes.

--- a/src/blocks/b-review/b-review.less
+++ b/src/blocks/b-review/b-review.less
@@ -148,12 +148,12 @@
 	color: #161f6a;
 
 	&:hover, &:active, &:focus {
-		background: lighten(#161f6a, 5%) !important;
-		border-color: lighten(#161f6a, 5%) !important;
+		background: #2856f6 !important;
+		border-color: #2856f6 !important;
 		color: #fff;
 
 		&.btn-info {
-			box-shadow: 0 10px 40px 10px fade(#161f6a, 30%);
+			box-shadow: 0 10px 40px 10px fade(#2856f6, 30%);
 		}
 	}
 
